psionic traits test 2 (not good)

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -402,81 +402,100 @@
  
  # Psionic leader traits
 	# Research - Science things
-	leader_trait_tec_psionic_mind_1:0 "Shrouded Mind"
-	leader_trait_tec_psionic_mind_1_desc:0 "§LThe shroud has affected the mind of this individual in a particular way, making them able to channel its empowered psionic capacities to have an unnatural, and near precognitive, way of thought."
+	leader_trait_tec_psionic_mind:0 "Shrouded Mind"
+	leader_trait_tec_psionic_mind_desc:0 "§LThe shroud has affected the mind of this individual in a particular way, making them able to channel its empowered psionic capacities to have an unnatural, and near precognitive, way of thought."
+
+	leader_trait_tec_psionic_mind_1:0 "$leader_trait_tec_psionic_mind$"
+	leader_trait_tec_psionic_mind_1_desc:0 "$leader_trait_tec_psionic_mind_desc$"
 	leader_trait_tec_psionic_mind_1_tooltip:0 "$todo_ascension$"
 
-	leader_trait_tec_psionic_mind_2:0 "$leader_trait_tec_psionic_mind_1$"
-	leader_trait_tec_psionic_mind_2_desc:0 "$leader_trait_tec_psionic_mind_1_desc$"
+	leader_trait_tec_psionic_mind_2:0 "$leader_trait_tec_psionic_mind$"
+	leader_trait_tec_psionic_mind_2_desc:0 "$leader_trait_tec_psionic_mind_desc$"
 	leader_trait_tec_psionic_mind_2_tooltip:0 "$todo_ascension$"
 
-	leader_trait_tec_psionic_mind_3:0 "$leader_trait_tec_psionic_mind_1$"
-	leader_trait_tec_psionic_mind_3_desc:0 "$leader_trait_tec_psionic_mind_1_desc$"
+	leader_trait_tec_psionic_mind_3:0 "$leader_trait_tec_psionic_mind$"
+	leader_trait_tec_psionic_mind_3_desc:0 "$leader_trait_tec_psionic_mind_desc$"
 	leader_trait_tec_psionic_mind_3_tooltip:0 "$todo_ascension$"
 
 	# Unity - Social things
-	leader_trait_tec_psionic_unity_1:0 "Veiled Will"
-	leader_trait_tec_psionic_unity_1_desc:0 "§LBrought by the immense possibilities given by the shroud, this capable individual to preemptively detect several events before they are even possible to happen, and even pre-visualize diverse outcomes of whatever happens, whenever happens, however happens... before it even barely starts, and never tells a word about it because what was, will be...§!"
+	leader_trait_tec_psionic_unity:0 "Veiled Will"
+	leader_trait_tec_psionic_unity_desc:0 "§LBrought by the immense possibilities given by the shroud, this capable individual to preemptively detect several events before they are even possible to happen, and even pre-visualize diverse outcomes of whatever happens, whenever happens, however happens... before it even barely starts, and never tells a word about it because what was, will be...§!"
+
+	leader_trait_tec_psionic_unity_1:0 "$leader_trait_tec_psionic_unity$"
+	leader_trait_tec_psionic_unity_1_desc:0 "$leader_trait_tec_psionic_unity_desc$"
 	leader_trait_tec_psionic_unity_1_tooltip:0 "$todo_ascension$"
 
-	leader_trait_tec_psionic_unity_2:0 "$leader_trait_tec_psionic_unity_1$"
-	leader_trait_tec_psionic_unity_2_desc:0 "$leader_trait_tec_psionic_unity_1_desc$"
+	leader_trait_tec_psionic_unity_2:0 "$leader_trait_tec_psionic_unity$"
+	leader_trait_tec_psionic_unity_2_desc:0 "$leader_trait_tec_psionic_unity_desc$"
 	leader_trait_tec_psionic_unity_2_tooltip:0 "$todo_ascension$"
 
-	leader_trait_tec_psionic_unity_3:0 "$leader_trait_tec_psionic_unity_1$"
-	leader_trait_tec_psionic_unity_3_desc:0 "$leader_trait_tec_psionic_unity_1_desc$"
+	leader_trait_tec_psionic_unity_3:0 "$leader_trait_tec_psionic_unity$"
+	leader_trait_tec_psionic_unity_3_desc:0 "$leader_trait_tec_psionic_unity_desc$"
 	leader_trait_tec_psionic_unity_3_tooltip:0 "$todo_ascension$"
 
 	# Body - Lifespan/maintenance
-	leader_trait_tec_psionic_body_1:0 "Infused Physique"
-	leader_trait_tec_psionic_body_1_desc:0 "§LUnnatural energy resonates within the body of this psionically gifted individual, allowing a longer than normal lifespan, different ways of existing and extreme dexterity at physical manifestations of such power, able to overcome by sheer force any obstacle, with an incredible martial display, to the point of even lifting or leveling down impossible structures with just bare extremities.§!"
+	leader_trait_tec_psionic_body:0 "Infused Physique"
+	leader_trait_tec_psionic_body_desc:0 "§LUnnatural energy resonates within the body of this psionically gifted individual, allowing a longer than normal lifespan, different ways of existing and extreme dexterity at physical manifestations of such power, able to overcome by sheer force any obstacle, with an incredible martial display, to the point of even lifting or leveling down impossible structures with just bare extremities.§!"
+
+	leader_trait_tec_psionic_body_1:0 "$leader_trait_tec_psionic_body$"
+	leader_trait_tec_psionic_body_1_desc:0 "$leader_trait_tec_psionic_body_desc$"
 	leader_trait_tec_psionic_body_1_effect:0 "$todo_ascension$"
 
-	leader_trait_tec_psionic_body_2:0 "$leader_trait_tec_psionic_body_1$"
-	leader_trait_tec_psionic_body_2_desc:0 "$leader_trait_tec_psionic_body_1_desc$"
+	leader_trait_tec_psionic_body_2:0 "$leader_trait_tec_psionic_body$"
+	leader_trait_tec_psionic_body_2_desc:0 "$leader_trait_tec_psionic_body_desc$"
 	leader_trait_tec_psionic_body_2_effect:0 "$todo_ascension$"
 
-	leader_trait_tec_psionic_body_3:0 "$leader_trait_tec_psionic_body_1$"
-	leader_trait_tec_psionic_body_3_desc:0 "$leader_trait_tec_psionic_body_1_desc$"
+	leader_trait_tec_psionic_body_3:0 "$leader_trait_tec_psionic_body$"
+	leader_trait_tec_psionic_body_3_desc:0 "$leader_trait_tec_psionic_body_desc$"
 	leader_trait_tec_psionic_body_3_effect:0 "$todo_ascension$"
 
 	# Power - 
-	leader_trait_tec_psionic_power_1:0 "Entropic Potency"
-	leader_trait_tec_psionic_power_1_desc:0 "§LPowerful energies from the shroud traverse this gifted individual, making them able to create highly energetic projections into either extremely volatile blasts or continued streams of energy, or even reshape the energy fields of entire industries or vessels."
+	leader_trait_tec_psionic_power:0 "Entropic Potency"
+	leader_trait_tec_psionic_power_desc:0 "§LPowerful energies from the shroud traverse this gifted individual, making them able to create highly energetic projections into either extremely volatile blasts or continued streams of energy, or even reshape the energy fields of entire industries or vessels."
+
+	leader_trait_tec_psionic_power_1:0 "$leader_trait_tec_psionic_power$"
+	leader_trait_tec_psionic_power_1_desc:0 "$leader_trait_tec_psionic_power_desc$"
 	leader_trait_tec_psionic_power_1_tooltip:0 "$todo_ascension$"
 
-	leader_trait_tec_psionic_power_2:0 "$leader_trait_tec_psionic_power_1$"
-	leader_trait_tec_psionic_power_2_desc:0 "$leader_trait_tec_psionic_power_1_desc$"
+	leader_trait_tec_psionic_power_2:0 "$leader_trait_tec_psionic_power$"
+	leader_trait_tec_psionic_power_2_desc:0 "$leader_trait_tec_psionic_power_desc$"
 	leader_trait_tec_psionic_power_2_tooltip:0 "$todo_ascension$"
 
-	leader_trait_tec_psionic_power_3:0 "$leader_trait_tec_psionic_power_1$"
-	leader_trait_tec_psionic_power_3_desc:0 "$leader_trait_tec_psionic_power_1_desc$"
+	leader_trait_tec_psionic_power_3:0 "$leader_trait_tec_psionic_power$"
+	leader_trait_tec_psionic_power_3_desc:0 "$leader_trait_tec_psionic_power_desc$"
 	leader_trait_tec_psionic_power_3_tooltip:0 "$todo_ascension$"
 
 	# Telekinesis
-	leader_trait_tec_psionic_telekinesis_1:0 "Immaterial Telekinesis"
-	leader_trait_tec_psionic_telekinesis_1_desc:0 "§LThis gifted psionic individual has the unnatural capacity of using its shroud-imbued powers with a high telekinetic proficiency, being able to physically translate, reshape or create anything around defying the laws of physics.§!"
+	leader_trait_tec_psionic_telekinesis:0 "Immaterial Telekinesis"
+	leader_trait_tec_psionic_telekinesis_desc:0 "§LThis gifted psionic individual has the unnatural capacity of using its shroud-imbued powers with a high telekinetic proficiency, being able to physically translate, reshape or create anything around defying the laws of physics.§!"
+
+	leader_trait_tec_psionic_telekinesis_1:0 "$leader_trait_tec_psionic_telekinesis$"
+	leader_trait_tec_psionic_telekinesis_1_desc:0 "$leader_trait_tec_psionic_telekinesis_desc$"
 	leader_trait_tec_psionic_telekinesis_1_tooltip:0 "$todo_ascension$"
 
-	leader_trait_tec_psionic_telekinesis_2:0 "$leader_trait_tec_psionic_telekinesis_1$"
-	leader_trait_tec_psionic_telekinesis_2_desc:0 "$leader_trait_tec_psionic_telekinesis_1_desc$"
+	leader_trait_tec_psionic_telekinesis_2:0 "$leader_trait_tec_psionic_telekinesis$"
+	leader_trait_tec_psionic_telekinesis_2_desc:0 "$leader_trait_tec_psionic_telekinesis_desc$"
 	leader_trait_tec_psionic_telekinesis_2_tooltip:0 "$todo_ascension$"
 
-	leader_trait_tec_psionic_telekinesis_3:0 "$leader_trait_tec_psionic_telekinesis_1$"
-	leader_trait_tec_psionic_telekinesis_3_desc:0 "$leader_trait_tec_psionic_telekinesis_1_desc$"
+	leader_trait_tec_psionic_telekinesis_3:0 "$leader_trait_tec_psionic_telekinesis$"
+	leader_trait_tec_psionic_telekinesis_3_desc:0 "$leader_trait_tec_psionic_telekinesis_desc$"
 	leader_trait_tec_psionic_telekinesis_3_tooltip:0 "$todo_ascension$"
 
 	# Teleport
-	leader_trait_tec_psionic_teleport_1:0 "Aethereal Teleportation"
-	leader_trait_tec_psionic_teleport_1_desc:0 "§LBy traveling between dimensions, this gifted psionic individual is able to influence an ample area or elements around with just a simple thought, with intelligent yet unnatural use of its psionic teleport capacities, to break the fundamental laws of space-time in their advantage.§!"
+	leader_trait_tec_psionic_teleport:0 "Aethereal Teleportation"
+	leader_trait_tec_psionic_teleport_desc:0 "§LBy traveling between dimensions, this gifted psionic individual is able to influence an ample area or elements around with just a simple thought, with intelligent yet unnatural use of its psionic teleport capacities, to break the fundamental laws of space-time in their advantage.§!"
 	leader_trait_tec_psionic_teleport_1_tooltip:0 "$todo_ascension$"
 
-	leader_trait_tec_psionic_teleport_2:0 "$leader_trait_tec_psionic_teleport_1$"
-	leader_trait_tec_psionic_teleport_2_desc:0 "$leader_trait_tec_psionic_teleport_1_desc$"
+	leader_trait_tec_psionic_teleport_1:0 "$leader_trait_tec_psionic_teleport$"
+	leader_trait_tec_psionic_teleport_1_desc:0 "$leader_trait_tec_psionic_teleport_desc$"
+	leader_trait_tec_psionic_teleport_1_tooltip:0 "$todo_ascension$"
+
+	leader_trait_tec_psionic_teleport_2:0 "$leader_trait_tec_psionic_teleport$"
+	leader_trait_tec_psionic_teleport_2_desc:0 "$leader_trait_tec_psionic_teleport_desc$"
 	leader_trait_tec_psionic_teleport_2_tooltip:0 "$todo_ascension$"
 
-	leader_trait_tec_psionic_teleport_3:0 "$leader_trait_tec_psionic_teleport_1$"
-	leader_trait_tec_psionic_teleport_3_desc:0 "$leader_trait_tec_psionic_teleport_1_desc$"
+	leader_trait_tec_psionic_teleport_3:0 "$leader_trait_tec_psionic_teleport$"
+	leader_trait_tec_psionic_teleport_3_desc:0 "$leader_trait_tec_psionic_teleport_desc$"
 	leader_trait_tec_psionic_teleport_3_tooltip:0 "$todo_ascension$"
  # /
  # --------------- Psi subtraits
