fix: some trait checks which assumed gestalt ethics weren't a thing

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -2371,3 +2371,8 @@
  leader_trait_tec_debug_non_councilor: "DEBUG If YOU SEE SCREAM AT EVOLVED"
  leader_trait_tec_debug_non_councilor_desc: "DEBUG If YOU SEE SCREAM AT EVOLVED"
 # /
+
+trait_ruler_champion_of_the_people_hive:0 "Protector of the Single-Minded"
+trait_ruler_champion_of_the_people_hive_desc: "$trait_ruler_champion_of_the_people_desc$"
+trait_ruler_champion_of_the_people_machine:0 "Warden of the Individual"
+trait_ruler_champion_of_the_people_machine_desc: "$trait_ruler_champion_of_the_people_desc$"
