partial: implementaiton of rural modifiers

--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -33,11 +33,23 @@ l_english:
 	tec_upgradeable_district_jobs_alloys:0 "This district can provide more jobs enacting a planetary £influence£ §YDecision§!, providing £alloys£ §YAlloy§! producing Jobs and requiring extra £volatile_motes£ §YUpkeep§!.\n\n"
 	tec_upgradeable_district_jobs_cg:0 "This district can provide more jobs enacting a planetary £influence£ §YDecision§!, providing §Y$tec_loc_consumer_goods$§! producing Jobs and requiring extra £rare_crystals£ §YUpkeep§!.\n\n"
  # Modifiers
-	mod_generator_district_housing_add: "$MOD_PLANET_HOUSING_ADD$ from Farming Districts"
-	mod_generator_district_buildings_add: "$MOD_PLANET_MAX_BUILDINGS_ADD$ from Farming Districts"
+	mod_mining_district_housing_add: "$tec_loc_housing$ from ['concept_tec_mining_district', Mining] Districts (Regular Worlds)"
+	mod_mining_district_buildings_add: "$tec_loc_building$ from ['concept_tec_mining_district', Mining] Districts (Regular Worlds)"
+	mod_mining_district_jobs_add: "$tec_loc_jobs$ from ['concept_tec_mining_district', Mining] Districts (Regular Worlds)"
 
-	mod_farming_district_housing_add: "$MOD_PLANET_HOUSING_ADD$ from Generator Districts"
-	mod_farming_district_buildings_add: "$MOD_PLANET_MAX_BUILDINGS_ADD$ from Generator Districts"
+	mod_generator_district_housing_add: "$tec_loc_housing$ from ['concept_tec_farming_district', Farming] Districts (Regular Worlds)"
+	mod_generator_district_buildings_add: "$tec_loc_building$ from ['concept_tec_farming_district', Farming] Districts (Regular Worlds)"
+	mod_generator_district_jobs_add: "$tec_loc_jobs$ from ['concept_tec_farming_district', Farming] Districts (Regular Worlds)"
+
+	mod_farming_district_housing_add: "$tec_loc_housing$ from ['concept_tec_generator_district', Generator] Districts (Regular Worlds)"
+	mod_farming_district_buildings_add: "$tec_loc_building$ from ['concept_tec_generator_district', Generator] Districts (Regular Worlds)"
+	mod_farming_district_jobs_add: "$tec_loc_jobs$ from ['concept_tec_generator_district', Generator] Districts (Regular Worlds)"
+
+	mod_industrial_district_housing_add: "$tec_loc_housing$ from ['concept_tec_industrial_district', Industrial] Districts"
+	mod_industrial_district_buildings_add: "$tec_loc_building$ from ['concept_tec_industrial_district', Industrial] Districts"
+	mod_industrial_district_jobs_add: "$tec_loc_jobs$ from ['concept_tec_industrial_district', Industrial] Districts"
+
+	mod_housing_district_housing_add: "$tec_loc_housing$ from ['concept_tec_housing_district', Housing] Districts"
  # /
 # /
 
