--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -60,7 +60,7 @@
 	tr_mercantile_federations_finish_desc:0 "$MOD_TRADE_VALUE_MULT$: §G+10%§!\nGrants access to the §Y$trade_federation$§! Federation type.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YArtifice§! will be available.§!\n"
 
 # ------------------------------------------------- Prosperity
-	tr_prosperity_finish_desc:4 "Resources from £job£ jobs: §G+5%§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YArtifice§! will be available.§!\n"
+	tr_prosperity_finish_desc:4 "§EThe Tier II tradition tree §YArtifice§! will be available.§!\n"
 
 # ------------------------------------------------- Subterfuge
 	tr_subterfuge_finish_desc:0 "Successful §YOperations§! refund §G50%§! of their Infiltration Level Cost.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YControl§! will be available.§!\n"
