--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -831,6 +831,13 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	mod_job_tec_cyborg_ripperdoc_per_pop:0 "§G+1§! $job_tec_cyborg_ripperdoc$ Job per $VALUE$ Pops"
 	mod_job_tec_cyborg_ripperdoc_per_pop_short:0 "\n§G+1§! £mod_job_tec_cyborg_ripperdoc_add£ per $VALUE$ £pop£"
  # /
+ # Agenda
+	council_agenda_agenda_tec_cybernetic_upgrade_name:0 "Augmentation Upgrade"
+	council_agenda_agenda_tec_cybernetic_upgrade_desc:0 "TODO ASCENSION"
+	council_agenda_agenda_tec_cybernetic_upgrade_effects:0 "TODO ASCENSION"
+	modifier_tec_agenda_tec_cybernetic_upgrade_finish:0 "Genetic Recombination"
+	modifier_tec_agenda_tec_cybernetic_upgrade_finish_desc:0 "$council_agenda_agenda_tec_cybernetic_upgrade_desc$"
+ # /
 
  # ------- Upgrade Crucibles (Gestalts)
 	building_tec_cybernetic_hospital_gestalt_effect:0 "This £building£ "
