feat: refactored rural districts with modifiers

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -1643,7 +1643,7 @@
  # former civic_welfare_state	# I HATE MODIFIERS I HATE MODIFIERS
 	civic_tec_regular_social_prosperity:0 "§R§!Social Prosperity"
 	civic_tec_regular_social_prosperity_desc:0 "['concept_tec_basic_civic']\n\nIn this society the State traditionally plays a key role in the protection and promotion of the economic and social well-being of its citizens."
-	civic_tec_regular_social_prosperity_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£pop£ Ensured Prosperity§!\n- Unemployed pops have extra §Y$tec_loc_happiness$§!.\n\n$tec_loc_c_modifiers$\n- $tec_loc_amenities$ from £pop_cat_ruler£ Rulers: §G+2§!\n\n§EFree (non-slaved) and Unemployed pops:§!\n- $tec_loc_unity$ Output: §G+0.25§!\n- $tec_loc_trade_value$: §G+0.25§!\n- $tec_loc_cg$ Upkeep: §R+0.25§!"
+	civic_tec_regular_social_prosperity_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£pop£ Ensured Prosperity§!\n- Unemployed pops have extra §Y$tec_loc_happiness$§!.\n\n$tec_loc_c_modifiers$\n- $tec_loc_amenities$ from £pop_cat_ruler£ Rulers: §G+2§!\n- $mod_housing_district_housing_add$: §G+1§!\n\n§EFree (non-slaved) and Unemployed pops:§!\n- $tec_loc_unity$ Output: §G+0.25§!\n- $tec_loc_trade_value$: §G+0.25§!\n- $tec_loc_cg$ Upkeep: §R+0.25§!"
 		#OLD_civic_tec_regular_social_prosperity_tooltip:0 "Unemployed pops will have extra §Y$tec_loc_happiness$§!.\n\nReduced Minimal Wage, Private Healthcare and Private Education policies are disabled.\n\n$tec_loc_c_modifiers$\n$tec_loc_amenities$ from £pop_cat_ruler£ Rulers: §G+2§!"
 
  # former civic_isolationism
@@ -1693,7 +1693,7 @@
  # former civic_tribalism
 	civic_tec_regular_tribalism:0 "§R§!Tribalism"
 	civic_tec_regular_tribalism_desc:0 "['concept_tec_basic_civic']\n\nWith strong social division in small groups of families and relatives, this xenophobic and rudimentary society is imbued with strong and deep bonds with their structures and what nature can provide for progress."
-	civic_tec_regular_tribalism_tooltip:0 "£district£ §YCity Districts§! provide §Y2§! less £housing£ §Yhousing§!, while each £district£ §YRural District§! provide §G+2§! extra £housing£ §Yhousing§! and §Y1§! extra £amenities£ Amenities.\n\n"
+	civic_tec_regular_tribalism_tooltip:0 "$tec_loc_c_unlocks_feature$ §HRural Communities§!\n- ['concept_tec_menial_district', £trigger_tec_basic_resources£ Rural] Districts provide §G+2§! §Y$tec_loc_housing$§! and §G+1§! §Y$tec_loc_amenities$§!\n- ['concept_tec_housing_district', £district£ City] Districts provide §R-2§! §Y$tec_loc_housing$§!\n\n$tec_loc_c_modifiers$\n- $MOD_POP_AMENITIES_USAGE_MULT$: §R-10%§!\n- $mod_rivalries_influence_produces_mult$: §G+25%§!"
 
  # former civic_star_settlers
 	civic_tec_regular_star_settlers:0 "§R§!Star Settlers"
@@ -1743,7 +1743,7 @@
 
 	civic_agrarian_idyll:1 "§S£tec_civic_challenging£§!Agrarian Idyll"
 	civic_agrarian_idyll_desc:1 "['concept_tec_challenging_civic']\n\nA simple and peaceful life can often be the most rewarding. This agrarian society has, to a large extent, managed to avoid large-scale urbanization."
-		civic_agrarian_idyll_tooltip_common: "$tec_loc_c_unlocks_feature$ §H£housing£ Bountiful Nature§!\n-  ['concept_tec_rural_district', £trigger_tec_basic_resources£ Rural] Districts provide §G+1§! §Y$tec_loc_housing$§!\n- ['concept_tec_housing_district', £district£ City] Districts provide §R-2§! §Y$tec_loc_housing$§!"
+		civic_agrarian_idyll_tooltip_common: "$tec_loc_c_unlocks_feature$ §H£housing£ Bountiful Nature§!\n- ['concept_tec_menial_district', £trigger_tec_basic_resources£ Rural] Districts provide §G+1§! §Y$tec_loc_housing$§!\n- ['concept_tec_housing_district', £district£ City] Districts provide §R-2§! §Y$tec_loc_housing$§!"
 		civic_agrarian_idyll_tooltip_restriction: "$tec_loc_c_restriction$\n- Cannot create ['concept_tec_ecumenopoleis']"
 		civic_agrarian_idyll_new_tooltip:0 "$civic_agrarian_idyll_tooltip_common$\n\n$tec_loc_c_unlocks_feature$ §H£building£ Agricultural Proficiency§!\n- Every §Y3§! ['concept_tec_farming_district', £district£ Farming] Districts grant §G+1§! §Y$tec_loc_building_slots$§!\n\n$civic_agrarian_idyll_tooltip_restriction$\n\n$tec_loc_c_modifiers$\n$civic_agrarian_idyll_extra_modifiers$"
 		civic_agrarian_idyll_extra_modifiers: "- $mod_planet_jobs_worker_produces_mult$: §G+10%§!\n- $tec_loc_amenities$ from £job_farmer£ $job_farmer_plural$: §G+2§!"
