--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -238,6 +238,9 @@
 	concept_tec_effect_category_pin_icon: "£trigger_tec_question£"
 	concept_tec_effect_category_desc: "Effect Category represents the category and group of jobs which are affects by effects of Civics, Ascensions, Traditions and so on.\n\nModifiers that affect a specific Effect Category affect all jobs in that group, and usually represents modifiers that give $tec_loc_trade_value$, $tec_loc_amenities$ or $tec_loc_naval_cap$ and such (so not resources).\n\n§RTo not be confused with ['concept_tec_economic_category']§!"
 
+	concept_tec_automated_districts: "Automated Menial Districts"
+	concept_tec_automated_districts_desc: "Automated Districts produce §Y$tec_loc_basic_resources$§! automatically without using $tec_loc_jobs$.\nAutomated Districts suffer the following modifiers:\n$t$- $mod_menial_district_housing_add$: §R-1§!\n$t$- $mod_menial_district_jobs_add$: §R-1§!\n$t$- $tec_loc_amenities$ from ['concept_tec_menial_district', Menial] Districts: §R-1§!"
+
 	concept_tec_booster_building: "Booster Building"
 	concept_tec_booster_building_icon: "£upgrade£ Booster Building"
 	concept_tec_booster_buildings: "Booster Buildings"
@@ -1319,34 +1322,34 @@
 	concept_tec_worker_job_tec_aqua_drone_plural_icon: "£job_tec_aqua_drone£ $job_tec_aqua_drone_plural$"
 	concept_tec_worker_job_tec_aqua_drone_desc: "§L$job_tec_aqua_drone_desc$§!\n\n$job_tec_aqua_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_simple_drone$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_farmers_alias']\n\n$tec_loc_amenities$: §G+2§!\n$tec_loc_c_produces$: §Y£food£ 8§!"
 
-	concept_tec_worker_job_miner: "$miner$"
-	concept_tec_worker_job_miner_icon: "£job_miner£ $miner$"
-	concept_tec_worker_job_miner_plural: "$miner_plural$"
-	concept_tec_worker_job_miner_plural_icon: "£job_miner£ $miner_plural$"
+	concept_tec_worker_job_miner: "$job_miner$"
+	concept_tec_worker_job_miner_icon: "£job_miner£ $job_miner$"
+	concept_tec_worker_job_miner_plural: "job_miner_plural$"
+	concept_tec_worker_job_miner_plural_icon: "£job_miner£ $job_miner_plural$"
 	concept_tec_worker_job_miner_desc: "§L$job_miner_desc$§!\n\n$job_miner_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_worker$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_miners_alias']\n\n$tec_loc_c_produces$: §Y£minerals£ 4§!"
 
-	concept_tec_worker_job_mining_drone: "$mining_drone$"
-	concept_tec_worker_job_mining_drone_icon: "£job_mining_drone£ $mining_drone$"
-	concept_tec_worker_job_mining_drone_plural: "$mining_drone_plural$"
-	concept_tec_worker_job_mining_drone_plural_icon: "£job_mining_drone£ $mining_drone_plural$"
+	concept_tec_worker_job_mining_drone: "$job_mining_drone$"
+	concept_tec_worker_job_mining_drone_icon: "£job_mining_drone£ $job_mining_drone$"
+	concept_tec_worker_job_mining_drone_plural: "$job_mining_drone_plural$"
+	concept_tec_worker_job_mining_drone_plural_icon: "£job_mining_drone£ $job_mining_drone_plural$"
 	concept_tec_worker_job_mining_drone_desc: "§L$job_mining_drone_desc$§!\n\n$job_mining_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_worker$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_miners_alias']\n\n$tec_loc_c_produces$: §Y£minerals£ 4§!"
 
-	concept_tec_worker_job_scrap_miner: "$scrap_miner$"
-	concept_tec_worker_job_scrap_miner_icon: "£job_scrap_miner£ $scrap_miner$"
-	concept_tec_worker_job_scrap_miner_plural: "$scrap_miner_plural$"
-	concept_tec_worker_job_scrap_miner_plural_icon: "£job_scrap_miner£ $scrap_miner_plural$"
+	concept_tec_worker_job_scrap_miner: "$job_scrap_miner$"
+	concept_tec_worker_job_scrap_miner_icon: "£job_scrap_miner£ $job_scrap_miner$"
+	concept_tec_worker_job_scrap_miner_plural: "$job_scrap_miner_plural$"
+	concept_tec_worker_job_scrap_miner_plural_icon: "£job_scrap_miner£ $job_scrap_miner_plural$"
 	concept_tec_worker_job_scrap_miner_desc: "§L$job_scrap_miner_desc$§!\n\n$job_scrap_miner_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_worker$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_miners_alias']\n\n$tec_loc_c_produces$: §Y£minerals£ 2§! §Y£alloys£ 1§!"
 
-	concept_tec_worker_job_scrap_miner_drone: "$scrap_miner_drone$"
-	concept_tec_worker_job_scrap_miner_drone_icon: "£job_scrap_miner_drone£ $scrap_miner_drone$"
-	concept_tec_worker_job_scrap_miner_drone_plural: "$scrap_miner_drone_plural$"
-	concept_tec_worker_job_scrap_miner_drone_plural_icon: "£job_scrap_miner_drone£ $scrap_miner_drone_plural$"
+	concept_tec_worker_job_scrap_miner_drone: "$job_scrap_miner_drone$"
+	concept_tec_worker_job_scrap_miner_drone_icon: "£job_scrap_miner_drone£ $job_scrap_miner_drone$"
+	concept_tec_worker_job_scrap_miner_drone_plural: "$job_scrap_miner_drone_plural$"
+	concept_tec_worker_job_scrap_miner_drone_plural_icon: "£job_scrap_miner_drone£ $job_scrap_miner_drone_plural$"
 	concept_tec_worker_job_scrap_miner_drone_desc: "§L$job_scrap_miner_drone_desc$§!\n\n$job_scrap_miner_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_worker$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_miners_alias']\n\n$tec_loc_c_produces$: §Y£minerals£ 2§! §Y£alloys£ 1§!"
 
-	concept_tec_worker_job_tec_reef_miner: "$tec_reef_miner$"
-	concept_tec_worker_job_tec_reef_miner_icon: "£job_tec_reef_miner£ $tec_reef_miner$"
-	concept_tec_worker_job_tec_reef_miner_plural: "$tec_reef_miner_plural$"
-	concept_tec_worker_job_tec_reef_miner_plural_icon: "£job_tec_reef_miner£ $tec_reef_miner_plural$"
+	concept_tec_worker_job_tec_reef_miner: "$job_tec_reef_miner$"
+	concept_tec_worker_job_tec_reef_miner_icon: "£job_tec_reef_miner£ $job_tec_reef_miner$"
+	concept_tec_worker_job_tec_reef_miner_plural: "$job_tec_reef_miner_plural$"
+	concept_tec_worker_job_tec_reef_miner_plural_icon: "£job_tec_reef_miner£ $job_tec_reef_miner_plural$"
 	concept_tec_worker_job_tec_reef_miner_desc: "§L$job_tec_reef_miner_desc$§!\n\n$job_tec_reef_miner_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_worker$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_miners_alias']\n\n$tec_loc_trade_value$: §G+2§!\n$tec_loc_c_produces$: §Y£minerals£ 6§!"
 
 	concept_tec_worker_job_tec_reef_drone: "$job_tec_reef_drone$"
@@ -1716,8 +1719,8 @@
 	concept_tec_industrial_district: "Industrial District"
 	concept_tec_industrial_district_desc: "Industrial Districts are districts which provide $tec_loc_industrial_resources$ Jobs such as ['concept_tec_specialist_job_foundry_plural_icon'] or ['concept_tec_specialist_job_artisan_plural_icon'].\n\nIndustrial Districts (Regular Planets):\n$t$- ['district:district_industrial']\n$t$- ['district:district_tec_factory']\n$t$- ['district:district_tec_biohive_industrial']\n$t$- ['district:district_tec_biohive_factory']\nIndustrial Districts (Special):\n$t$- ['district:district_tec_proto_industrial']\n$t$- ['district:district_tec_proto_factory']\nIndustrial Districts (Habitats):\n$t$- ['district:district_hab_industrial']\n$t$- ['district:district_tec_hab_factory']\nIndustrial Districts (Arcologies):\n$t$- ['district:district_arcology_civilian_industry']\n$t$- ['district:district_arcology_arms_industry']\n$t$- ['district:district_tec_elysium_forge']\n$t$- ['district:district_tec_elysium_civil']\n$t$- ['district:district_tec_hab_arcology_foundry']\n$t$- ['district:district_tec_hab_arcology_industry']\nIndustrial Districts (Ringworld):\n$t$- ['district:district_tec_rw_forge']\n$t$- ['district:district_tec_rw_industry']"
 
-	concept_tec_rural_district: "Rural District"
-	concept_tec_rural_district_desc: "- ['concept_tec_farming_district']\n- ['concept_tec_generator_district']\n- ['concept_tec_industrial_district']"
+	concept_tec_menial_district: "Menial District"
+	concept_tec_menial_district_desc: "- ['concept_tec_farming_district']\n- ['concept_tec_generator_district']\n- ['concept_tec_mining_district']"
 
 	# Ethics
  # Living Standards
