--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -94,9 +94,12 @@
  # Fake resource locs
 	tec_loc_housing: "£housing£ $PLANET_HOUSING_TITLE$"
 	tec_loc_amenities: "£amenities£ $PLANET_AMENITIES_TITLE$"
+	tec_loc_amenities_icon: "£amenities£"
 	tec_loc_amenity: "£amenities£ Amenity"
 	tec_loc_amenities_gestalt: "£amenities_no_happiness£ $PLANET_AMENITIES_TITLE$"
 	tec_loc_amenity_gestalt: "£amenities_no_happiness£ Amenity"
+	tec_loc_amenities_gestalt_icon: "£amenities_no_happiness£"
+	tec_loc_amenities_generic: "[TecGetAmenitiesIcon] $PLANET_AMENITIES_TITLE$"
 	tec_loc_crime: "£crime£ $PLANET_CRIME_TITLE$"
 	tec_loc_crime_gestalt: "£crime£ $MOD_PLANET_CRIME_NO_HAPPINESS_MULT$"
 	tec_loc_happiness: "£happiness£ $MOD_POP_HAPPINESS$"
