feat: voidborn now gives guaranteed habitat tech and can be taken earlier

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -1299,3 +1299,7 @@ tech_reverse_advanced_dome: " "
 
  # ---- Requirements
 # /
+
+
+add_research_options_voidborn:0 "Research options gained after upgrading a Habitat:\n£engineering_research£§Y$tech_habitat_3$§!"
+tec_add_research_options_voidborn_first_build:0 "Research options gained after making a Habitat:\n£engineering_research£§Y$tech_habitat_2$§!"
