feat: more civic tooltip improvements with concepts, and holding job inline and fixes for defaults

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -4163,3 +4163,13 @@ l_english:
 
 
 	TEC_RULER_JOB_TRIGGER_DYNAMIC: "[TEC_RULER_JOB_TRIGGER_DYNAMIC]"
+
+
+	job_overlord_arborist_effect_desc: "£job_ranger£ $job_overlord_arborist_plural$ produce §Y$tec_loc_food$§! for the §YOverlord§! and §YVassal§!"
+	job_overlord_knight_effect_desc: "$job_overlord_knight_commandery_effect_desc$" # redirect for the job inline
+
+
+	job_overlord_manager_drone:0 "$job_overlord_manager$ Drone"
+	job_overlord_manager_drone_plural:0 "$job_overlord_manager$ Drones"
+	job_overlord_manager_drone_desc:0 "Manager Drones that optimize the behaviour of maintenance drones to synergize with the Overlord's long-term corporate trajectory."
+	mod_job_overlord_manager_drone_add:0 "$job_overlord_manager_drone$ Jobs"
