--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -51,6 +51,7 @@
 	tec_loc_c_unlocks_trait:0 "§EUnlocks Trait:§!"
 
 	tec_loc_c_unlocks_building:0 "§EUnlocks Building:§!"
+	tec_loc_c_unlocks_starbase_building:0 "§EUnlocks Starbase Building:§!"
 	tec_loc_c_unlocks_branch:0 "§EBranch Office Building:§!"
 	tec_loc_c_unlocks_holding:0 "§EUnlocks Holding:§!"
 
@@ -865,7 +866,7 @@
 	concept_tec_specialist_job_tec_mecha_priest_icon: "£job_tec_mecha_priest£ $job_tec_mecha_priest$"
 	concept_tec_specialist_job_tec_mecha_priest_plural: "$job_tec_mecha_priest_plural$"
 	concept_tec_specialist_job_tec_mecha_priest_plural_icon: "£job_tec_mecha_priest£ $job_tec_mecha_priest_plural$"
-	concept_tec_specialist_job_tec_mecha_priest_desc: "§L$job_tec_mecha_priest_desc$§!\n\n$job_tec_mecha_priest_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_priests_alias']\n\n$tec_loc_amenities$: §G+3§!\n$tec_loc_c_produces$: §Y£unity£ 5§! §Y£engineering£ 2§!\n$tec_loc_c_upkeep$: §Y£consumer_goods£ 2§!"
+	concept_tec_specialist_job_tec_mecha_priest_desc: "§L$job_tec_mecha_priest_desc$§!\n\n$job_tec_mecha_priest_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_priests_alias']\n\n$tec_loc_amenities$: §G+2§!\n$tec_loc_c_produces$: §Y£unity£ 5§! §Y£engineering£ 2§!\n$tec_loc_c_upkeep$: §Y£consumer_goods£ 2§!"
 
 	concept_tec_specialist_job_culture_worker: "$job_culture_worker$"
 	concept_tec_specialist_job_culture_worker_alias: "$job_culture_worker$"
@@ -1474,9 +1475,13 @@
 	concept_tec_worker_job_tec_state_worker_desc: "TODO"
 
 
+
 	# Bureaucrats
 
 	# /
+
+	concept_tec_menial_jobs: "Menial Jobs"
+	concept_tec_menial_jobs_desc: "Menial Jobs are jobs producing one of the 3 $tec_loc_basic_resources$.\n\nSuch $tec_loc_jobs$ are:\n$t$- ['concept_tec_worker_job_miner_plural'] (and variants)\n$t$- ['concept_tec_worker_job_farmer_plural'] (and variants)\n$t$- ['concept_tec_worker_job_technicians_plural'] (and variants)"
 # /
 
 ## Buildings
@@ -1924,6 +1929,24 @@
 
 	concept_tec_edict_group_dark_matter: "$tec_loc_dark_matter$ Edicts"
 	concept_tec_edict_group_dark_matter_desc: "- ['concept_tec_edict_shadow_matrix_alias']\n- ['concept_tec_edict_obsidian_veil_alias']\n- ['concept_tec_edict_dark_matter_forging_alias']\n- ['concept_tec_edict_dark_matter_unravelling_alias']\n- ['concept_tec_edict_baryonic_insight_alias']"
+
+	concept_tec_edict_sacrifice_togetherness: "$edict_sacrifice_togetherness$ Edict"
+	concept_tec_edict_sacrifice_togetherness_alias: "$edict_sacrifice_togetherness$"
+	concept_tec_edict_sacrifice_togetherness_icon: "£edict£ $edict_sacrifice_togetherness$ Edict"
+	concept_tec_edict_sacrifice_togetherness_alias_icon: "£edict£ $edict_sacrifice_togetherness$"
+	
+	concept_tec_edict_sacrifice_harmony: "$edict_sacrifice_harmony$ Edict"
+	concept_tec_edict_sacrifice_harmony_alias: "$edict_sacrifice_harmony$"
+	concept_tec_edict_sacrifice_harmony_icon: "£edict£ $edict_sacrifice_harmony$ Edict"
+	concept_tec_edict_sacrifice_harmony_alias_icon: "£edict£ $edict_sacrifice_harmony$"
+	
+	concept_tec_edict_sacrifice_bounty: "$edict_sacrifice_bounty$ Edict"
+	concept_tec_edict_sacrifice_bounty_alias: "$edict_sacrifice_bounty$"
+	concept_tec_edict_sacrifice_bounty_icon: "£edict£ $edict_sacrifice_bounty$ Edict"
+	concept_tec_edict_sacrifice_bounty_alias_icon: "£edict£ $edict_sacrifice_bounty$"
+	
+	concept_tec_edict_death_cult: "Sacrificial Edicts"
+	concept_tec_edict_death_cult_desc: "- ['concept_tec_edict_sacrifice_togetherness']\n- ['concept_tec_edict_sacrifice_harmony']\n- ['concept_tec_edict_sacrifice_bounty']"
  # /
  # Policy
 	concept_tec_ethic_policy: "Ethic Policy"
