gene path shenanigans

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -413,14 +413,14 @@
 	ap_engineered_evolution_genetics_desc:0 "$tec_loc_ap_type_biological$ - $tec_loc_ap_type_base$\n§LTo leave our genetic destiny in the hands of nature is an inefficient and excruciatingly slow process. Why not jump-start the future of our species?§!"
 
 	ap_engineered_evolution_genetics_tooltip:0 "$tec_loc_ap_chosen_path$ §GGenetics§!\n§LWe have discovered a way to improve the genetic makeup of our species with safe and directed changes.§!\n\n$tec_loc_ap_u_feature$ §HGenetic Malleability§!\n- The cost of §YBasic Traits§! is reduced by §G1§! (up to 1 trait point cost), allowing more diverse Biological Species modifications."
-	ap_engineered_evolution_genetics_tradition:0 "\n\n$tec_loc_ap_u_tradition$ §H$tec_loc_unity_icon$ $tradition_genetics$§!\n- Unlocks the §Y$tec_loc_unity_icon$ $tradition_genetics$§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$.\n\n$tec_tradition_unlock_evolved_paths$"
+	ap_engineered_evolution_genetics_tradition:0 "\n$tec_loc_ap_u_tradition$ §H$tec_loc_unity_icon$ $tradition_genetics$§!\n- Unlocks the §Y$tec_loc_unity_icon$ $tradition_genetics$§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$.\n\n$tec_tradition_unlock_evolved_paths$"
  # /
  # Biogenics
 	ap_engineered_evolution_biogenics:0 "Forced Evolution"
 	ap_engineered_evolution_biogenics_desc:0 "$tec_loc_ap_type_biological$ - $tec_loc_ap_type_base$\n§LWe have taken the reins of our genetic destiny in the hands of nature is an inefficient and excruciatingly slow process. Why not jump-start the future of our species?§!"
 
 	ap_engineered_evolution_biogenics_tooltip:0 "$tec_loc_ap_chosen_path$ §GBiogenics§!\n§LWe have discovered a way to produce adaptive micro-mutations in the genetic structure of our species.§!\n\n$tec_loc_ap_u_feature$ §HTODO§!\n- TODO"
-	ap_engineered_evolution_biogenics_tradition:0 "\n\n$tec_loc_ap_u_tradition$ §H$tec_loc_unity_icon$ $tradition_tec_biogenics$§!\n- Unlocks the §Y$tec_loc_unity_icon$ $tradition_tec_biogenics$§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$.\n\n$tec_tradition_unlock_evolved_paths$"
+	ap_engineered_evolution_biogenics_tradition:0 "\n$tec_loc_ap_u_tradition$ §H$tec_loc_unity_icon$ $tradition_tec_biogenics$§!\n- Unlocks the §Y$tec_loc_unity_icon$ $tradition_tec_biogenics$§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$.\n\n$tec_tradition_unlock_evolved_paths$"
  # /
 # /
 
