--- a/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
@@ -1912,8 +1912,11 @@ todo_ascension:0 ""
 
 	tec_gene_path.20030.name:0 "The Seed Of Perfection"
 	tec_gene_path.20030.desc.regular:0 "TODO ASCENSION"
-	tec_gene_path.20030.continue:0 "TODO ASCENSION"
-	tec_gene_path.20030.continue.tooltip:0 "TODO ASCENSION"
+	tec_gene_path.20030.desc.hive:0 "TODO ASCENSION"
+	tec_gene_path.20030.continue.regular:0 "TODO ASCENSION"
+	tec_gene_path.20030.continue.regular.tooltip:0 "TODO ASCENSION"
+	tec_gene_path.20030.continue.hive:0 "TODO ASCENSION"
+	tec_gene_path.20030.continue.hive.tooltip:0 "TODO ASCENSION"
 
 	# Subpaths
 	tec_gene_path.20050.name:0 "Divided Inheritance"
@@ -1928,9 +1931,9 @@ todo_ascension:0 ""
 	tec_gene_path.20051.desc.focusgenetics.regular:0 "TODO ASCENSION - You have picked to focus on self-genetics for a single species"
 	tec_gene_path.20051.desc.demogenetics.regular:0 "TODO ASCENSION - You have picked to focus on multi-genetics for everyone"
 	tec_gene_path.20051.confirm.regular:0 "Yes, our society will advance this way."
-	tec_gene_path.20051.confirm.tooltip.regular:0 "TODO ASCENSION"
+	tec_gene_path.20051.confirm.regular.tooltip:0 "TODO ASCENSION"
 	tec_gene_path.20051.reselect.regular:0 "We should reconsider..."
-	tec_gene_path.20051.reselect.tooltip.regular:0 "TODO ASCENSION"
+	tec_gene_path.20051.reselect.regular.tooltip:0 "TODO ASCENSION"
 
 	tec_gene_path.20150.name:0 "Collective Legacy"
 	tec_gene_path.20150.desc.hive:0 "TODO ASCENSION"
